force-app/main/default/objects/agf__ADM_Work__c/agf__ADM_Work__c.object-meta.xml
<CustomObject>
    <description>Multipurpose object that defines bugs, defects, incidents, user stories, test cases, etc.</description>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>