force-app/main/default/objects/agf__ADM_Work__c/fields/agf__Catchup_Factor__c.field-meta.xml
<CustomField>
    <fullName>agf__Catchup_Factor__c</fullName>
    <description>This field is set with an Apex Code Trigger. It&#39;s purpose is to convey that for each unit of resource for which a task is assigned there is a factor of increased time each remaining day (over the expected time based on burndown) necessary to get the story back in line with the burndown.</description>
    <label>Catch-up Factor</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>