force-app/main/default/objects/agf__ADM_Work__c/fields/agf__Origin__c.field-meta.xml
<CustomField>
    <fullName>agf__Origin__c</fullName>
    <defaultValue>&#39;Outside&#39;</defaultValue>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>