force-app/main/default/objects/agf__ADM_Work__c/fields/external_ID__c.field-meta.xml
<CustomField>
    <fullName>external_ID__c</fullName>
    <label>external ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>