force-app/main/default/objects/agf__ADM_Work__c/fields/Parent_Work_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work ID</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>