force-app/main/default/objects/agf__ADM_Work__c/fields/Senior_Mgmt_POC__c.field-meta.xml
<CustomField>
    <fullName>Senior_Mgmt_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Mgmt POC</label>
    <type>Checkbox</type>
</CustomField>