force-app/main/default/objects/agf__ADM_Work__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>