force-app/main/default/objects/agf__ADM_Work__c/validationRules/agf__Scheduled_Build_Not_Blank_P4_Status_Chng.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Scheduled_Build_Not_Blank_P4_Status_Chng</fullName>
    <active>true</active>
    <description>Setting the P4 status to something other than --None-- requires that a scheduled build has been entered as well.</description>
    <errorConditionFormula>AND( ISBLANK( agf__Scheduled_Build__c ) ,CONTAINS(TEXT( agf__Perforce_Status__c ), &#39;Open&#39;))</errorConditionFormula>
    <errorMessage>Enter a valid scheduled build when setting the Source Control Status to Open or Open Once.</errorMessage>
</ValidationRule>