force-app/main/default/objects/agf__ADM_Work__c/listViews/Open_Work.listView-meta.xml
<ListView>
    <fullName>Open_Work</fullName>
    <columns>CREATED_DATE</columns>
    <columns>agf__Subject__c</columns>
    <columns>NAME</columns>
    <columns>agf__Status__c</columns>
    <columns>agf__Story_Points__c</columns>
    <columns>agf__Assignee__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>agf__Epic__c</columns>
    <columns>agf__Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>agf__ADM_Work__c.agf__User_Story</value>
    </filters>
    <filters>
        <field>agf__Status__c</field>
        <operation>equals</operation>
        <value>New,Acknowledged,Triaged,In Progress,Investigating,Ready for Review,QA In Progress,Waiting,Pending Release,Duplicate</value>
    </filters>
    <label>Open Work</label>
</ListView>