force-app/main/default/objects/agf__ADM_Work__c/listViews/SF_Support.listView-meta.xml
<ListView>
    <fullName>SF_Support</fullName>
    <columns>NAME</columns>
    <columns>agf__Subject__c</columns>
    <columns>agf__Epic__c</columns>
    <columns>agf__Product_Tag__c</columns>
    <columns>agf__Assignee__c</columns>
    <columns>agf__Priority_Rank__c</columns>
    <columns>agf__Priority__c</columns>
    <columns>agf__Story_Points__c</columns>
    <columns>agf__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Scrum_Team__c</field>
        <operation>equals</operation>
        <value>kd_sf_support</value>
    </filters>
    <label>SF Support</label>
</ListView>